fix on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,3 +26,20 @@ body {
 
   }
 }
+
+
+@media only screen
+and (device-width: 375px)
+and (device-height: 812px)
+and (-webkit-device-pixel-ratio: 3)
+and (orientation: portrait),
+only screen
+and (device-width: 414px)
+and (device-height: 896px)
+and (-webkit-device-pixel-ratio: 2)
+and (orientation: portrait) {
+  /* Custom styles for iPhones */
+  .hero__image {
+    top: 70%;
+  }
+}
